Changed install link to not working

--- a/projects/browserlauncher/browserlauncher.html
+++ b/projects/browserlauncher/browserlauncher.html
@@ -64,7 +64,7 @@
                             <a href="harrypotter1:">
                                 <button class="btn btn-success border-light" style="padding-right: 30px; padding-left: 30px; padding-top: 10px; padding-bottom: 10px;">Play</button>
                             </a>
-                            <a href="http://www.mediafire.com/file/kfx2978uqxtyhiv/HP1.exe" onclick="downloadPopup()">
+                            <a href="javascript:alert('Thats piracy, buy/subscription feature coming soon')" onclick="downloadPopup()">
                                 <button class="btn btn-dark border-light" style="padding-right: 30px; padding-left: 30px; padding-top: 10px; padding-bottom: 10px;">Install</button>
                             </a>
                         </div>
