Long time change push

--- a/projects/barcode/generator.html
+++ b/projects/barcode/generator.html
@@ -39,7 +39,7 @@
                     <hr style="width: 5px; background-color: white;">
                     <label for="displayValueCheckbox">Display Barcode Value</label>
                     <hr style="width: 10px; background-color: white;">
-                    <input type="number" placeholder="Height" class="form-control d-inline p-1" id="barcodeHeightInput" style="width: 5vw;" onchange="if(document.getElementById('barcodeValue').value != ''){generateBarcode()}">
+                    <input type="number" placeholder="Height " class="form-control d-inline p-1" id="barcodeHeightInput" style="width: 5vw;" onchange="if(document.getElementById('barcodeValue').value != ''){generateBarcode()}">
                     <hr style="width: 10px; background-color: white;">
                     <input type="number" placeholder="Width" class="form-control d-inline p-1" id="barcodeWidthInput" style="width: 5vw;" onchange="if(document.getElementById('barcodeValue').value != ''){generateBarcode()}">
                 </div>
