--- a/projects/HackersParadise/index.html
+++ b/projects/HackersParadise/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/bootstrap-5.1.0-dist/css/bootstrap.min.css">
-    <script src="../public/bootstrap-5.1.0-dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="./public/bootstrap-5.1.0-dist/css/bootstrap.min.css">
+    <script src="./public/bootstrap-5.1.0-dist/js/bootstrap.bundle.min.js"></script>
     <title>Hackers Paradise</title>
 </head>
 <body class="bg-secondary">
