Isearch done for now

--- a/projects.html
+++ b/projects.html
@@ -37,5 +37,7 @@
     </header>
 
     <script src="./script.js"></script>
+    <div id="Isearch"></div>
+    <script src="./projects/apis/isearch.js"></script>
 </body>
 </html>
