--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="#" style="background-color: black; border-radius: 5px; padding: 8px; text-shadow: none;">About</a></li>
+                <li><a href="#" style="background-color: black; border-radius: 5px; padding: 8px; text-shadow: none; box-shadow: 0px 0px 12px 5px #fff;">About</a></li>
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="https://github.com/CodeZhifty/codezhifty", target="blank">Github</a></li>
             </ul>
