--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="#" style="background-color: black; border-radius: 5px; padding: 8px; text-shadow: none;">Home</a></li>
+                <li><a href="#" style="background-color: black; border-radius: 5px; padding: 8px; text-shadow: none; box-shadow: 0px 0px 12px 5px #fff;">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="https://github.com/CodeZhifty/codezhifty", target="blank">Github</a></li>
