--- a/projects/voiceassistantversion2/index.html
+++ b/projects/voiceassistantversion2/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="recognition.start()">start</button>
     <script src="./script.js"></script>
 </body>
 </html>
