--- a/projects/weathervisualizer/index.html
+++ b/projects/weathervisualizer/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 <style>
 * {
     box-sizing: border-box;
@@ -123,8 +124,8 @@ body {
     <input type="text" class="npt" id="npt" autocomplete="off" autocorrect="off" autocapitalize="off" style="display: inline;">
     <hr style="border: none; margin: 5px;">
     <select name="" class="npt" id="snpt" style="font-size: 30px; margin: 0px;">
-        <option value="imperial">Fahrenheit</option>
         <option value="metric">Celcius</option>
+        <option value="imperial">Fahrenheit</option>
     </select>
     <br>
     <button id="btn" onclick="runWeather()">Show my weather</button>
