--- a/projects/testEnviroinment/index.html
+++ b/projects/testEnviroinment/index.html
@@ -7,5 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="evaBot"></div>
+    <script src="../apis/evabot/evabot.js"></script>
 </body>
 </html>
