--- a/projects/testEnviroinment/index.html
+++ b/projects/testEnviroinment/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="evaBot"></div>
-    <script src="../apis/evabot/evabot.js"></script>
+    <div id="evaBot" style="width: 50%;"></div>
+    <script src="../apis/evabot.js"></script>
 </body>
 </html>
