--- a/projects/testEnviroinment/index.html
+++ b/projects/testEnviroinment/index.html
@@ -7,5 +7,25 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Add a placeholder for the Twitch embed -->
+    <div id="twitch-embed"></div>
+
+    <!-- Load the Twitch embed script -->
+    <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+
+    <!-- Create a Twitch.Player object. This will render within the placeholder div -->
+    <script type="text/javascript">
+    const CHL = "MarckozHD";
+
+    const twitchPlayer = new Twitch.Player("twitch-embed", {
+        width: 854,
+        height: 480,
+        channel: CHL
+    });
+
+    twitchPlayer.addEventListener(Twitch.Embed.VIDEO_PLAY, function() {
+        console.log(CHL + " is live!")
+    });
+    </script>
 </body>
 </html>
